--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
     <link rel="stylesheet" href="./src/menu.css">
 </head>
 <body>
-    <header class="header">1</header>
+    <header class="header">
+        <div class="header-container">
+            <a href="">
+                <h1 class="logo">
+                    Agência XYZ
+                </h1>
+            </a>
+
+            <input type="checkbox" id="menu-hamburguer">
+
+            <label for="menu-hamburguer">
+                <div class="menu">
+                    <span class="hamburguer"></span>
+                </div>
+            </label>
+
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <section class="hero">2</section>
     <sectio class="about">3</sectio>
     <section class="services">4</section>
