--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             </nav>
         </div>
     </header>
-    <section class="hero">2</section>
+    <section class="hero">
+        <h2>
+            We make cool things
+        </h2>
+    </section>
     <sectio class="about">3</sectio>
     <section class="services">4</section>
     <section class="projects">5</section>
