alterado posicao de pastas e acrescentado images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agência XYZ</title>
 
-    <link rel="stylesheet" href="./src/reset.css">
-    <link rel="stylesheet" href="./src/variable.css">
-    <link rel="stylesheet" href="./src/style.css">
-    <link rel="stylesheet" href="./src/menu.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/variable.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/menu.css">
 </head>
 <body>
     <header class="header">
