corrigido posicao do hero e display do hamburguer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </h1>
             </a>
             <nav>
-                <input type="checkbox" id="menu-hamburguer">
+                <input type="checkbox" id="menu-hamburguer" />
 
                 <label for="menu-hamburguer">
                     <div class="menu">
