--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             We make cool things
         </h2>
     </section>
-    <sectio class="about">3</sectio>
+    <section class="about">3</section>
     <section class="services">4</section>
     <section class="projects">5</section>
     <footer class="footer">6</footer>
