iniciado a section about

--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
             We make cool things
         </h2>
     </section>
-    <section class="about">3</section>
+    <section class="about">
+        <div class="item">
+            <h3>Tittle</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias voluptatum excepturi autem, eius ipsum, odit consequatur harum magnam obcaecati necessitatibus ab. Cupiditate maiores laudantium natus! Aut ea doloribus libero voluptates.</p>
+            <a href="" class="btn-know-more">Saiba mais</a>
+        </div>
+        <div class="item">
+            <h3>Tittle</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias voluptatum excepturi autem, eius ipsum, odit consequatur harum magnam obcaecati necessitatibus ab. Cupiditate maiores laudantium natus! Aut ea doloribus libero voluptates.</p>
+            <a href="" class="btn-know-more">Saiba mais</a>
+        </div>
+    </section>
     <section class="services">4</section>
     <section class="projects">5</section>
     <footer class="footer">6</footer>
