finalizado a section about

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias voluptatum excepturi autem, eius ipsum, odit consequatur harum magnam obcaecati necessitatibus ab. Cupiditate maiores laudantium natus! Aut ea doloribus libero voluptates.</p>
             <a href="" class="btn-know-more">Saiba mais</a>
         </div>
+        <div class="image right"></div>
+        <div class="image left"></div>
         <div class="item">
             <h3>Tittle</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias voluptatum excepturi autem, eius ipsum, odit consequatur harum magnam obcaecati necessitatibus ab. Cupiditate maiores laudantium natus! Aut ea doloribus libero voluptates.</p>
