finalizado a section services

--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
             <a href="" class="btn-know-more">Saiba mais</a>
         </div>
     </section>
-    <section class="services">4</section>
+    <section class="services">
+        <div class="service">
+            <img src="./src/images/bolinha1.png" alt="Bolinha 1">
+            <div class="service-info">
+                <h3>SEO</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis tenetur, ullam quod excepturi odio asperiores perspiciatis dolore? Sint at dolor illum totam culpa dolore corrupti possimus maiores exercitationem! Eos, accusamus!</p>
+            </div>
+        </div>
+        <div class="service">
+            <img src="./src/images/bolinha2.png" alt="Bolinha 1">
+            <div class="service-info">
+                <h3>SEO</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis tenetur, ullam quod excepturi odio asperiores perspiciatis dolore? Sint at dolor illum totam culpa dolore corrupti possimus maiores exercitationem! Eos, accusamus!</p>
+            </div>
+        </div>
+    </section>
     <section class="projects">5</section>
     <footer class="footer">6</footer>
 
