--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             We make cool things
         </h2>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="item">
             <h3>Tittle</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias voluptatum excepturi autem, eius ipsum, odit consequatur harum magnam obcaecati necessitatibus ab. Cupiditate maiores laudantium natus! Aut ea doloribus libero voluptates.</p>
@@ -54,7 +54,7 @@
             <a href="" class="btn-know-more">Saiba mais</a>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
         <div class="service">
             <img src="./src/images/bolinha1.png" alt="Bolinha 1">
             <div class="service-info">
@@ -70,7 +70,7 @@
             </div>
         </div>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="project">
             <a href="#">
                 <img src="./src/images/tomatoes.jpg" alt="tomatoes">
@@ -92,7 +92,33 @@
             </a>
         </div>
     </section>
-    <footer class="footer">6</footer>
+    <footer class="footer" id="contact">
+        <h4>Agência XYZ</h4>
+
+        <nav>
+            <ul>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href=""></a>Projects</li>
+            </ul>
+        </nav>
+
+        <!-- redes sociais -->
+        <div class="social">
+            <a href="">
+                <i class="fab fa-facebook-square"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-pinterest"></i>
+            </a>
+        </div>
+    </footer>
 
 
 </body>
