--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./src/css/variable.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/menu.css">
+    <link rel="stylesheet" href="./src/css/font-awesome.css">
 </head>
 <body>
     <header class="header">
@@ -99,7 +100,7 @@
             <ul>
                 <li><a href="">About</a></li>
                 <li><a href="">Services</a></li>
-                <li><a href=""></a>Projects</li>
+                <li><a href="">Projects</a></li>
             </ul>
         </nav>
 
